syntax = "proto3";
package aws_ec2.plugins.gloo.solo.io;

option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/plugins/aws/glooec2";

import "gogoproto/gogo.proto";
option (gogoproto.equal_all) = true;

import "github.com/solo-io/solo-kit/api/v1/ref.proto";

// Upstream Spec for AWS Lambda Upstreams
// AWS Upstreams represent a collection of Lambda Functions for a particular AWS Account (IAM Role or User account)
// in a particular region
message UpstreamSpec {
    // The AWS Region where the desired EC2 instances exist
    string region = 1;

    // A [Gloo Secret Ref](https://gloo.solo.io/introduction/concepts/#Secrets) to an AWS Secret
    // AWS Secrets can be created with `glooctl secret create aws ...`
    // If the secret is created manually, it must conform to the following structure:
    //  ```
    //  access_key: <aws access key>
    //  secret_key: <aws secret key>
    //  ```
    core.solo.io.ResourceRef secret_ref = 2 [(gogoproto.nullable) = false];

    // The list of EC2 instances contained within this region.
    // This list will be automatically populated by Gloo if discovery is enabled for AWS EC2
    repeated Ec2InstanceSpec ec2_instances = 3;
}

// Each EC2 Instance Spec contains data necessary for Gloo to route to EC2 instances:
// - name of the function
// - qualifier for the function
message Ec2InstanceSpec {
    // the logical name gloo should associate with this function. if left empty, it will default to
    // lambda_function_name+qualifier
    string public_dns = 1;

    // the port to which gloo should route
    uint32 port = 2;
}
